--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 
         <div class="footer-basic">
             <footer>
-                <p>Impressum</p>
+                <p><a href="kontakt.html" id="kontakt">Kontakt</a></p>
 
 
             </footer>
