--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
                     <li><a href="index.html" class="links">Home</a></li>
                     <li><a href="ziele.html" class="links">Ziele</a></li>
                     <li><a href="family.html" class="links">Familienmitglieder</a></li>
+                    <li><a href="urlaub.html" class="links">Urlaubszeitraum</a></li>
+
                     <li><a href="https://earthroulette.com/" class="links">Interessante Orte</a></li>
                 </div>
 
