--- a/public/urlaub.html
+++ b/public/urlaub.html
@@ -3,12 +3,59 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyFamilyHolidayPlaner</title>
+    <link rel="stylesheet" href="./css/stylesheet.css">
+
+    <link rel="stylesheet" href="./css/dialoge.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
+    <link href="fontawesome-free-5.15.1-web/fontawesome-free-5.15.1-web/css/all-css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/b30115917b.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+
 </head>
 
 <body>
+    <div class="header-basic">
+        <header>
+            <h1 class="topic">Urlaubszeitraum</h1>
+            <img class="background" src="Images/hintergrund.jpg">
+        </header>
+    </div>
+    <div class="nav-basic">
+        <nav class="container">
+            <div class="topnav">
+                <li><a href="index.html" class="links">Home</a></li>
+                <li><a href="ziele.html" class="links">Ziele</a></li>
+                <li><a href="family.html" class="links">Familienmitglieder</a></li>
+                <li><a href="urlaub.html" class="links">Urlaubszeitraum</a></li>
+                <li><a href="https://earthroulette.com/" target="_blank" class="links">Interessante Orte</a></li>
+            </div>
+        </nav>
+    </div>
+
+
+
+    <div class="article-basic">
+        <div class="site-container">
+            <div class="article-container" id="acontainer">
+
+
+            </div>
+        </div>
+    </div>
+
+    <div class="footer-basic">
+        <footer>
+            <p><a href="kontakt.html" id="kontakt">Kontakt</a></p>
+
+
+        </footer>
+    </div>
+
+
 
 </body>
 
