Urlaubszeitraum hinzugefügt und Ziele überarbeitet

--- a/public/family.html
+++ b/public/family.html
@@ -11,7 +11,8 @@
     <link href="fontawesome-free-5.15.1-web/fontawesome-free-5.15.1-web/css/all-css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b30115917b.js" crossorigin="anonymous"></script>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
 
 
@@ -32,7 +33,9 @@
                 <li><a href="index.html" class="links">Home</a></li>
                 <li><a href="ziele.html" class="links">Ziele</a></li>
                 <li><a href="family.html" class="links">Familienmitglieder</a></li>
-                <li><a href="https://earthroulette.com/" class="links" target="_blank">Interessante Orte</a></li>
+                <li><a href="urlaub.html" class="links">Urlaubszeitraum</a></li>
+
+                <li><a href="https://earthroulette.com/" class="links">Interessante Orte</a></li>
             </div>
 
         </nav>
@@ -80,7 +83,8 @@
 
     <div id="body-overlay"></div>
     <div class="dialog" id="editFamilymember-dialog">
-        <a href="#" role="button" class="dialog-schliessen-button" onclick="dialogSchliessen('editFamilymember-dialog')">
+        <a href="#" role="button" class="dialog-schliessen-button"
+            onclick="dialogSchliessen('editFamilymember-dialog')">
             <i class="fa-regular fa-circle-xmark"></i>
         </a>
         <h3>Familienmitglied Bearbeiten</h3>
