--- a/public/urlaub.html
+++ b/public/urlaub.html
@@ -39,10 +39,60 @@
 
 
     <div class="article-basic">
-        <div class="site-container">
-            <div class="article-container" id="acontainer">
+        <div>
+            <div class="site-container">
+                <div class="article-container">
+                    <article class="article-card">
+                        <figure class="article-image">
+                            <img src="Images/FrühlingIcon.jpg" alt="Moschee" />
+                        </figure>
+                        <div class="article-content">
+                            <a href="#" class="card-category">Frühling</a>
+                            <h3 class="card-title"> Einen Urlaub im Frühjahr</h3>
+                            <p class="card-excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+                                nihil
+                                expedita tempora eligendi, officiis nesciunt vero qui?</p>
+                        </div>
+                    </article>
 
+                    <article class="article-card">
+                        <figure class="article-image">
+                            <img src="Images/SommerIcon.jpg" alt="Moschee" />
+                        </figure>
+                        <div class="article-content">
+                            <a href="#" class="card-category">Sommer</a>
+                            <h3 class="card-title"> Einen Urlaub im Sommer</h3>
+                            <p class="card-excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+                                nihil
+                                expedita tempora eligendi, officiis nesciunt vero qui?</p>
+                        </div>
+                    </article>
+                    <article class="article-card">
+                        <figure class="article-image">
+                            <img src="Images/HerbstIcon.jpg" alt="Moschee" />
+                        </figure>
+                        <div class="article-content">
+                            <a href="#" class="card-category">Herbst</a>
+                            <h3 class="card-title"> Einen Urlaub im Herbst</h3>
+                            <p class="card-excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+                                nihil
+                                expedita tempora eligendi, officiis nesciunt vero qui?</p>
+                        </div>
+                    </article>
+                    <article class="article-card">
+                        <figure class="article-image">
+                            <img src="Images/WinterIcon.jpg " alt="Moschee" />
+                        </figure>
+                        <div class="article-content">
+                            <a href="#" class="card-category">Winter</a>
+                            <h3 class="card-title"> Einen Urlaub im Winter</h3>
+                            <p class="card-excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+                                nihil
+                                expedita tempora eligendi, officiis nesciunt vero qui?</p>
+                        </div>
+                    </article>
 
+                </div>
             </div>
         </div>
     </div>
