Nav leiste angepasst und ziele löschen, edit

--- a/public/urlaub.html
+++ b/public/urlaub.html
@@ -27,10 +27,10 @@
     <div class="nav-basic">
         <nav class="container">
             <div class="topnav">
-                <li><a href="index.html" class="links">Home</a></li>
+                <li><a href="urlaub.html" class="links">Urlaubszeitraum</a></li>
                 <li><a href="ziele.html" class="links">Ziele</a></li>
                 <li><a href="family.html" class="links">Familienmitglieder</a></li>
-                <li><a href="urlaub.html" class="links">Urlaubszeitraum</a></li>
+                <li><a href="index.html" class="links">Priorisieren</a></li>
                 <li><a href="https://earthroulette.com/" target="_blank" class="links">Interessante Orte</a></li>
             </div>
         </nav>
@@ -47,7 +47,7 @@
                             <img src="Images/FrühlingIcon.jpg" alt="Moschee" />
                         </figure>
                         <div class="article-content">
-                            <a href="#" class="card-category">Frühling</a>
+                            <a href="ziele.html" class="card-category">Frühling</a>
                             <h3 class="card-title"> Einen Urlaub im Frühjahr</h3>
                             <p class="card-excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
                                 nihil
@@ -60,7 +60,7 @@
                             <img src="Images/SommerIcon.jpg" alt="Moschee" />
                         </figure>
                         <div class="article-content">
-                            <a href="#" class="card-category">Sommer</a>
+                            <a href="ziele.html" class="card-category">Sommer</a>
                             <h3 class="card-title"> Einen Urlaub im Sommer</h3>
                             <p class="card-excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
                                 nihil
@@ -72,7 +72,7 @@
                             <img src="Images/HerbstIcon.jpg" alt="Moschee" />
                         </figure>
                         <div class="article-content">
-                            <a href="#" class="card-category">Herbst</a>
+                            <a href="ziele.html" class="card-category">Herbst</a>
                             <h3 class="card-title"> Einen Urlaub im Herbst</h3>
                             <p class="card-excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
                                 nihil
@@ -84,7 +84,7 @@
                             <img src="Images/WinterIcon.jpg " alt="Moschee" />
                         </figure>
                         <div class="article-content">
-                            <a href="#" class="card-category">Winter</a>
+                            <a href="ziele.html" class="card-category">Winter</a>
                             <h3 class="card-title"> Einen Urlaub im Winter</h3>
                             <p class="card-excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
                                 nihil
