--- a/public/kontakt.html
+++ b/public/kontakt.html
@@ -26,9 +26,11 @@
         <div class="nav-basic">
             <nav class="container">
                 <div class="topnav">
-                    <li><a href="index.html" class="links">Home</a></li>
+                    <li><a href="urlaub.html" class="links">Urlaubszeitraum</a></li>
                     <li><a href="ziele.html" class="links">Ziele</a></li>
                     <li><a href="family.html" class="links">Familienmitglieder</a></li>
+                    <li><a href="index.html" class="links">Priorisieren</a></li>
+
                     <li><a href="https://earthroulette.com/" class="links">Interessante Orte</a></li>
                 </div>
 
